Dni imprimido por pantalla

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             <div class="field">
               <div class="control">
             <label>Nombre</label><br>
-            <input class="input is-info"  type="text" name="nombre" id="nombre" placeholder="Introduce tu nombre"><BR>
+            <input class="input is-info"  type="text" name="nombre" id="nombre" placeholder="Introduce tu nombre" required><BR>
             <label>Apellido</label><br>
-            <input class="input is-info"  type="text" name="apellido" id="apellido" placeholder="Introduce tu apellido"><BR>
+            <input class="input is-info"  type="text" name="apellido" id="apellido" placeholder="Introduce tu apellido" required><BR>
             <label>DNI</label><bR>
-            <input class="input is-info"  type="text" name="dni" id="dni" placeholder="Introduce tu dni"><br>
+            <input class="input is-info"  type="text" name="dni" id="dni" placeholder="Introduce tu dni" required><br>
             <input type="button" onclick="averiguaLetra();" value="Comprobar">            
-            <h3>NOMBRE:<strong id="nombre_registro"></strong></h3><br>
+            <h3>NOMBRE:<strong id="nombre_registro"></strong></h3>
             <h3>APELLIDO:<strong id="apellido_dni"></strong></h3>
             <h3>DNI:<strong id="total_final"></strong></h3>
 
