--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         *
       -->
       <h1>REGISTRO DNI POLICIA NACIONAL</h1>
-
+<!-- Formulario registrar datos-->
           <section>
             <div class="field">
               <div class="control">
@@ -74,7 +74,9 @@
             <input class="input is-info"  type="text" name="apellido" id="apellido" placeholder="Introduce tu apellido" required><BR>
             <label>DNI</label><bR>
             <input class="input is-info"  type="text" name="dni" id="dni" placeholder="Introduce tu dni" required><br>
-            <input type="button" onclick="averiguaLetra();" value="Comprobar">            
+            <!-- Enviar los datos a la funcion-->
+            <input type="button" onclick="averiguaLetra();" value="Comprobar">  
+            <!--se imprimen los datos en pantalla-->          
             <h3>NOMBRE:<strong id="nombre_registro"></strong></h3>
             <h3>APELLIDO:<strong id="apellido_dni"></strong></h3>
             <h3>DNI:<strong id="total_final"></strong></h3>
